--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/disilveira/api-projeto-integrado#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dateformat": "^4.5.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
